Fix KaTeX overflow

--- a/src/routes/Article.css
+++ b/src/routes/Article.css
@@ -123,3 +123,15 @@ article {
 		@apply text-sm;
 	}
 }
+
+.katex {
+	@apply whitespace-nowrap;
+}
+
+.katex-display {
+	@apply max-w-full overflow-x-scroll overflow-y-hidden p-2;
+}
+
+.katex-display::-webkit-scrollbar {
+	@apply hidden;
+}
